<resources>
    <string name="app_name">Restaurant Finder</string>
    <string name="title_activity_side_menu">Restaurant Finder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Restaurant Finder</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_search">Search</string>
    <string name="menu_recent_matches">Recent Matches</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help \u0026 Feedback</string>
    <string name="menu_exit">Exit</string>
    <string name="clear_recent_matches">Clear Recent Matches</string>
</resources>
