<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.restaurantrecognition.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_recent_matches"
        android:name="com.example.restaurantrecognition.ui.recentmatches.RecentMatchesFragment"
        android:label="@string/menu_recent_matches"
        tools:layout="@layout/fragment_recent_matches" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.restaurantrecognition.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.restaurantrecognition.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.restaurantrecognition.ui.exit.ExitFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />


</navigation>